--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "B.S. Detector",
-  "version": "0.0.5",
+  "name": "Viralkollen – av Viralgranskaren",
+  "version": "0.0.1",
   "manifest_version": 2,
   "default_locale": "en",
-  "description": "Warns users about questionable news sources with a simple tooltip.",
-  "homepage_url": "https://self.agency",
+  "description": "Varnar dig för tveksamma sajter",
+  "homepage_url": "http://viralgranskaren.se",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
