--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "default_locale": "en",
-  "description": "Varnar dig för tveksamma sajter",
+  "description": "Varnar dig för tveksamma sajter. Baserad på B.S Detector",
   "homepage_url": "http://viralgranskaren.se",
   "icons": {
     "16": "icons/icon16.png",
