--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,8 @@
 {
   "name": "Viralkollen – av Viralgranskaren",
   "version": "0.0.2",
+  "author": "Tidnings AB Metro",
+  "short_name": "Viralkollen",
   "manifest_version": 2,
   "default_locale": "en",
   "description": "Varnar dig för tveksamma sajter. Baserad på B.S Detector",
