--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Viralkollen – av Viralgranskaren",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Tidnings AB Metro",
   "short_name": "Viralkollen",
   "manifest_version": 2,
@@ -18,6 +18,9 @@
     ],
     "persistent": true
   },
+  "browser_action": {
+   "default_popup": "popup.html"
+ },
   "content_scripts": [ {
      "css": [ "css/hint.min.css", "src/inject/inject.css"],
      "js": [ "js/jquery/jquery.min.js", "src/inject/inject.js" ],
