--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Viralkollen – av Viralgranskaren",
-  "version": "0.0.3",
+  "name": "Viralgranskarens varningslista",
+  "version": "0.0.4",
   "author": "Tidnings AB Metro",
   "short_name": "Viralkollen",
   "manifest_version": 2,
