--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -14,7 +14,7 @@
   },
   "background": {
     "scripts": [
-      "src/bg/background.js"
+      "js/background.js"
     ],
     "persistent": true
   },
@@ -22,10 +22,14 @@
    "default_popup": "popup.html"
  },
   "content_scripts": [ {
-     "css": [ "css/hint.min.css", "src/inject/inject.css"],
-     "js": [ "js/jquery/jquery.min.js", "src/inject/inject.js" ],
+     "css": [ "css/hint.min.css", "css/inject.css"],
+     "js": [ "js/jquery-3.1.1.slim.min.js", "js/inject.js" ],
      "matches": [ "*://*/*" ],
      "exclude_matches": ["http://www.metro.se/*"],
+     "all_frames": true,
      "run_at": "document_end"
-  } ]
+  } ],
+  "web_accessible_resources": [
+    "data/data.json"
+    ]
 }
