Stöd för Viralgranskarens logo i varningar

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -30,6 +30,7 @@
      "run_at": "document_end"
   } ],
   "web_accessible_resources": [
-    "data/data.json"
+    "data/data.json",
+    "logo.png"
     ]
 }
